@@ -16,6 +16,7 @@
 	- Stop APS firing at dead missiles.
 	- 'subProjectileCount' has been deprecated and replaced with 'projectileCount'; this specifies number of pellets per shot (for shotguns, etc) to make it more intuitive. Existing shotgun-type weapons will need to update their bulletDefs.
 	- The subMunitionType field for beehive ammo now uses the syntax of "ammotype; quantity" (e.g. subMunitionType = 35x228AHEADPellet; 30) with number of projectiles released on detonation set here instead of the subMunition's bulletDef.
+	- Fix the aiming reticles of guns (fixed and turrets) and auto-proxy-tracking when using MouseAimFlight (again).
 	- Missiles:
 		- Fix issue with Rotary Rails trying to use missiles that have previously been blown off from combat damage.
 		- Fix issue with MultiMissilelauncher Turrets throwing an NRE when AI firing.
